--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,6 +22,6 @@
     <% end %>
 
     <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">changes</a>
+    <%= link_to "change", "http://gravatar.com/emails", target: :_blank %>
   </div>
 </div>
